[project][style] 程式碼格式調整